# flip-disc-display

./: .gitignore  .suppress.cppcheck  CMakeLists.txt  LICENSE  Makefile  README.md  calculator.ipynb  platformio.ini  pyproject.toml  sdkconfig.defaults  sdkconfig.esp32dev  sdkconfig.esp32s3dev1u
.github/workflows/: build.yml
include/: c_app_main_binding.h
src/: CMakeLists.txt  esp_central.h  main.c
test/test_dummy/: test_dummy.cpp
