[tool.poetry]
name = "flip-disc-display"
version = "0.1.0"
description = ""
authors = ["Jacob Daitzman <jdtzmn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
